# formula-se

./: .gitignore  PLAN.md  README.md  docker-compose.yml
.github/workflows/: agent-build.yml
agent/: .gitignore  README.md  config.example.toml  pyproject.toml  run_agent.py
agent/fse_agent/: __init__.py  __main__.py  agent.py  client.py  config.py  se_control.py
agent/tests/: test_config.py  test_reconcile.py  test_se_control.py
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a1b7d3f5c9e2_add_hex_station_limit.py  a4d9e6b2c815_add_station_construction.py  a832351bb4bd_editable_start_slots_snapshot_.py  b6e1f9a3c72d_add_shipyard_build_slots.py  c4be2a139430_initial_schema.py  (+9 more)
backend/app/: main.py  seed.py  worker.py
backend/data/: block_definitions.json
backend/scripts/: extract_blockdata.py
backend/tests/: fixtures.py  test_blueprint.py  test_config.py  test_deliverers.py  test_gps.py  test_hexmap.py  test_resources.py  test_servers.py  test_ships.py  test_stations.py  test_turns.py  test_validation.py  test_worldsave.py
frontend/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  auth.tsx  index.css  main.tsx
k8s/: README.md  api.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  postgres.yaml  secret.example.yaml  web.yaml  worker.yaml
k8s/base/: api.yaml  configmap.yaml  kustomization.yaml  postgres-cluster.yaml  secret.example.yaml
(+81 files in other folders)
