[project]
name = "fse-agent"
version = "0.1.0"
description = "Formula SE dedicated-server agent: polls the API and launches prepared worlds."
requires-python = ">=3.11"
# Pure standard library on 3.11+ (tomllib is built in). Nothing to install.
dependencies = []

[project.optional-dependencies]
# Only needed if you must run on Python 3.10.
py310 = ["tomli>=2.0"]
# Build a standalone fse-agent.exe.
build = ["pyinstaller>=6"]
# Run the tests.
test = ["pytest>=8"]

[project.scripts]
fse-agent = "fse_agent.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fse_agent"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
